// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthButton renders correctly 1`] = `
<a
  className="authok-lock-social-button authok-lock-social-big-button"
  data-provider="strategy"
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  <div
    className="authok-lock-social-button-icon"
    style={Object {}}
  />
  <div
    className="authok-lock-social-button-text"
    style={Object {}}
  >
    label
  </div>
</a>
`;

exports[`AuthButton renders with style customizations 1`] = `
<a
  className="authok-lock-social-button authok-lock-social-big-button"
  data-provider="strategy"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "primaryColor",
    }
  }
  type="button"
>
  <div
    className="authok-lock-social-button-icon"
    style={
      Object {
        "backgroundImage": "url('test')",
      }
    }
  />
  <div
    className="authok-lock-social-button-text"
    style={
      Object {
        "color": "foregroundColor",
      }
    }
  >
    label
  </div>
</a>
`;
